部分业务接口新增